--- a/cv_page1.html
+++ b/cv_page1.html
@@ -22,7 +22,16 @@
         <p><strong>Phone:</strong> *********</p>
         <p><strong>Email:</strong> 117761489@umail.ucc.ie</p>
         
-        <a href="cv_page2.html" class="btn btn-dark">Next</a>
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="homepage.html">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="homepage.html">Home</a></li>
+            <li class="page-item"><a class="page-link" href="cv_page1.html">1</a></li>
+            <li class="page-item"><a class="page-link" href="cv_page2.html">2</a></li>
+            <li class="page-item"><a class="page-link" href="cv_page3.html">3</a></li>
+            <li class="page-item"><a class="page-link" href="cv_page2.html">Next</a></li>
+          </ul>
+        </nav>
     </body>
     
 </html>
