--- a/cv_page2.html
+++ b/cv_page2.html
@@ -27,7 +27,16 @@
         <p><strong>Course:</strong> Mechanical Engineering (lvl.7)</p>
         <p><strong>Years:</strong> 2012-2015</p>
         
-        <a href="cv_page3.html" class="btn btn-dark">Next</a>
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="cv_page2.html">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="homepage.html">Home</a></li>
+            <li class="page-item"><a class="page-link" href="cv_page1.html">1</a></li>
+            <li class="page-item"><a class="page-link" href="cv_page2.html">2</a></li>
+            <li class="page-item"><a class="page-link" href="cv_page3.html">3</a></li>
+            <li class="page-item"><a class="page-link" href="cv_page3.html">Next</a></li>
+          </ul>
+        </nav>
     </body>
     
 </html>
