--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,7 @@
     <body>
         <h1 class="mainheading">117761489 - IS1113 Project!</h1>
         
-        <a href="cv_page1.html">Cirriculum Vitae</a>
+        <a href="cv/cv_page1.html">Cirriculum Vitae</a>
     </body>
     
 </html>
