css partial changes not finished

--- a/homepage.html
+++ b/homepage.html
@@ -15,7 +15,10 @@
         <br/>
         <center><a href="interests/sports.html">Interests</a></center>
         <br/>
-        <center><a href ="ebusiness/Ebus1.php"></a></center>
+        <center><a href ="ebusiness/Ebus1.php">EBusiness</a></center>
+        <br/>
+        <br/>
+        <footer> Copyright &copy; Daniel Crowley </footer>
     
     </body>
     
