--- a/interests/sports.html
+++ b/interests/sports.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="../interests/sports.html">Sports</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../interests/travel.html">Travel</a>
+                <a class="nav-link" href="../intersts/travel.html">Travel</a>
               </li>
             </ul>
           </div>
