--- a/cv/cv_page3.html
+++ b/cv/cv_page3.html
@@ -46,10 +46,11 @@
 		</div>
 		
 		<div id="footer">
-        <footer> Copyright &copy; Daniel Crowley </footer>
+        <footer> Copyright &copy; Daniel Crowley(117761489) </footer>
 		</div>
 		
 		</div>
+		
     </body>
     
 </html>
