--- a/homepage.html
+++ b/homepage.html
@@ -20,11 +20,11 @@
   		</div>
   			
   		<div id="main">
-        <center><a href="cv/cv_page1.html">Cirriculum Vitae</a></center>
+        <a href="cv/cv_page1.html">Cirriculum Vitae</a>
         <br/>
-        <center><a href="interests/sports.html">Interests</a></center>
+        <a href="interests/sports.html">Interests</a>
         <br/>
-        <center><a href ="ebusiness/Ebus1.php">EBusiness</a></center>
+        <a href ="ebusiness/Ebus1.php">EBusiness</a>
         <br/>
         <br/>
         </div>
