--- a/cv/cv_page2.html
+++ b/cv/cv_page2.html
@@ -24,7 +24,7 @@
   			    <a href="../homepage.html">Home</a>
   			    <a class="active" href="cv_page1.html">CV</a>
             <a href="../interests/sports.html">Interests</a>
-            <a href=../ebusiness/ebus1.php>EBusiness</a>
+            <a href=../ebusiness/Ebus1.php>EBusiness</a>
   			</div>
   			
   			<div id="content">
