--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
             <h1 class="mainheading">117761489 - IS1113 Project!</h1>
         <div id="nav" class="topnav">
   			<a class="active" href="homepage.html">Home</a>
-  			<a href="cv_page1.html">CV</a>
+  			<a href="/..cv/cv_page1.html">CV</a>
             <a href="../interests/sports.html">Interests</a>
             <a href=../ebusiness/Ebus1.php>EBusiness</a>
   		</div>
