Ebusiness Homepage and other changes

--- a/interests/travel.html
+++ b/interests/travel.html
@@ -29,13 +29,17 @@
     <body>
     
         <div id="pagepiling">
-	       <div class="section" id="section1">Most traveled to: Spain</div>
-	       <div class="section" id="section2">Want to travel to: Boston </div>
+	       <div class="section" id="section1"><strong>Most traveled to: Manchester</strong></div>
+	       <div class="section" id="section2"><strong>Want to travel to: Boston </strong></div>
 	       <div class="section" id="section3">
-	            Settle in: Ireland
+	            <strong>Settle in: Ireland</strong>
 	       <br/>
 	       <br/>
 	       <a href="../interests/sports.html" class="button button-primary">Back</a>
+	       <a href="../interests/cloud.html" class="button button-primary">Next</a>
+	       <br/>
+	       <br/>
+	       <br/>
 	       <a href="../homepage.html" class="button button-primary">Home</a>
 	            
          </div>
