--- a/cv/cv_page3.html
+++ b/cv/cv_page3.html
@@ -18,10 +18,10 @@
         <div id="container">
 
         <div id="nav" class="topnav">
-  		    <a href="../homepage.html">Home</a>
-  			<a class="active" href="cv_page1.html">CV</a>
-            <a href="../interests/sports.html">Interests</a>
-            <a href="../ebusiness/Ebus1.php">EBusiness</a>
+  		    <li><a href="../homepage.html">Home</a></li>
+  			<li><a class="active" href="../cv/cv_page1.html">CV</a></li>
+            <li><a href="../interests/sports.html">Interests</a></li>
+            <li style="float:right"><a href="../ebusiness/Ebushome.html">EBusiness</a></li>
   		</div>
   			
   			<div id="content">
