--- a/ebusiness/EBusHome.html
+++ b/ebusiness/EBusHome.html
@@ -32,7 +32,7 @@
             <br/>
             <br/>
             <p>This Website contains information about the latest services availible in the cloud industry.
-            Check out our <a href="../ebusiness/EbusAbout.html">About Cloud</a> section for more information
+            Check out our <a href="../ebusiness/EBusAbout.html">About Cloud</a> section for more information
             on each of the cloud services available and the prices in our <a href="../ebusiness/Ebus1.php">Store</a>.
             </p>
         </div>
