finalising website and fixed bugs

--- a/cv/cv_page2.html
+++ b/cv/cv_page2.html
@@ -53,7 +53,7 @@
           <img src="../images/CCRI.png" style="width:350px; height:75px" alt="CCRI Logo">
           <br/>
           <br/>
-          <p><strong>School:</strong> Colaiste Chriost Rí</p>
+          <p><strong>School:</strong> Colaiste Chriost R&iacute;</p>
           <p><strong>Years:</strong> 2006-2012</p>
           
           </div>
